mega commit trop sale

--- a/rapport.tex
+++ b/rapport.tex
@@ -41,14 +41,14 @@
 \newtheorem{cor}[thm]{Corollary}%
 \newtheorem{lem}[thm]{Lemma}%
 
-\theoremstyle{prop}%
-\newtheorem{prop}[thm]{Proposition}%
+\theoremstyle{proposition}%
+\newtheorem{proposition}[thm]{Proposition}%
 
-\theoremstyle{defin}%
-\newtheorem{defin}[thm]{Definition}%
+\theoremstyle{definition}%
+\newtheorem{definition}[thm]{Definition}%
 
-\theoremstyle{rem}%
-\newtheorem*{rem}{Remark}%
+\theoremstyle{remark}%
+\newtheorem*{remark}{Remark}%
 
 \theoremstyle{example}%
 \newtheorem*{example}{Example}%
