--- a/includes/contribution.tex
+++ b/includes/contribution.tex
@@ -27,13 +27,14 @@ distance between $S$ and $T$ also in polynomial time.
 To help us build the reduction, a few conceptual remarks can be made,
 in order to guide the research. First of all, the reduction has no
 obligation to be surjective; as a matter of fact, it is quite often
-not surjective. The image of the reduction has to be small enough to know the
-general form of the solution of each instance in order to be able to
-prove the equivalence
-$\omega_{A} \in Y_{A} \Leftrightarrow \omega_{b} = f(\omega_{a}) \in Y_{B}$ (where
-$A$ is the initial NP-complete problem and $B$ is the problem we
-consider). Yet, if the image of $\Omega_{A}$ by the reduction has to
-be big enough so that we are unable to find a polynomial algorithm
+not surjective. The image of the reduction has to be small enough to
+know the general form of the solution of each instance in order to be
+able to prove the equivalence
+$\omega_{A} \in Y_{A} \Leftrightarrow \omega_{b} = f(\omega_{a}) \in
+Y_{B}$
+(where $A$ is the initial NP-complete problem and $B$ is the problem
+we consider). Yet, the image of $\Omega_{A}$ by the reduction has
+to be big enough so that we are unable to find a polynomial algorithm
 solving the problem on the set of images of the reduction. Indeed,
 finding such an algorithm and a reduction would mean we would have
 solved the open question of the equality of the P and NP classes,
@@ -47,7 +48,7 @@ leading to the NP-hardness lies somewhere else.
 
 I first considered the trees of height 2. In the NEST and NeST
 algorithms, C. Godin, P. Ferraro and R. Azais consider only edit
-operations such as the height of any pre-existing node is unchanged
+operations such that the height of any pre-existing node is unchanged
 (see Figure \ref{fig:edit_height}). I decided to first use these edit
 operations.
 \begin{figure}
@@ -58,10 +59,15 @@ operations.
 \end{figure}
 
 \subsubsection{Trees of height 2 with same height} 
-Let $T$ be a tree of height 2 (see Figure \ref{fig:height2}). We can
-first notice that if there are any leaves of depth 1, they do not
-require any edit operations to obtain $NST(T)$. We can for this reason
-assume that every node of depth 1 is of height 1.
+Let $T$ be a tree of height 2 (see Figure \ref{fig:height2}). Let us
+denote $NST(T)$ by $S$ and an optimal edit mapping between $T$ and $S$
+by $\Phi$. We will show in this section that it is possible to find
+$\Phi$ in polynomial time.  
+
+We can first notice that if there are any leaves of depth 1, they do
+not require any edit operations to obtain $NST(T)$. We can for this
+reason assume that every node of depth 1 is of height 1 (see Figure
+\ref{fig:height2}).
 
 \begin{figure}
   \centering
@@ -70,29 +76,25 @@ assume that every node of depth 1 is of height 1.
   \label{fig:height2}
 \end{figure}
 
-Let us denote $NST(T)$ by $S$ and an optimal edit mapping between $T$
-and $S$ by $\Phi$. We will show in this section that it is possible to
-find Phi in polynomial time.
-
 Let us denote the nodes of height 1 of $T$ by
 $(u_{i})_{1 \leqslant i \leqslant N}$ and
-$(n_{i})_{1 \leqslant i \leqslant N}$ their number of children. We
-will suppose that the sequence $(n_{i})_{1 \leqslant i \leqslant N}$ is
-sorted by ascending order. Each $u_{i}$ can be either
-deleted or mapped on a node of height 1 of $S$, and since $S$ is
-self-nested all the nodes of height 1 in $S$ are isomorphic to one
-another. The complete subtree under the each node of height 1 of $S$
-is characterized by its number of leaves. As a result, the edit
-mapping leading from $T$ to $S$ is characterized by the $I_{0}$ the
-set of index of the nodes deleted and by $\tilde{n}$ the number of
-leaves under a node of height 1 in $S$. Thus, we will try to find
-$I_{0}$ and $\tilde{n}$ such as the corresponding self nested tree is
-a minimal distance from $T$.
+$(n_{i})_{1 \leqslant i \leqslant N}$ their resective number of
+children. We will suppose that the sequence
+$(n_{i})_{1 \leqslant i \leqslant N}$ is sorted by ascending
+order. Each $u_{i}$ can be either deleted or mapped on a node of
+height 1 of $S$, and since $S$ is self-nested, all the nodes of height
+1 in $S$ are isomorphic to one another. The complete subtree under the
+each node of height 1 of $S$ is characterized by its number of
+leaves. As a result, the edit mapping leading from $T$ to $S$ is
+characterized by the $I_{0}$ the set of indices of the nodes deleted
+and by $\tilde{n}$ the number of leaves under a node of height 1 in
+$S$. Thus, we will try to find $I_{0}$ and $\tilde{n}$ such that the
+corresponding self nested tree is a minimal distance from $T$.
 
-To delete $u_{i}$, in order to respect the constraint of Zhang, we
-have to delete first all of his children execept one. Therefore,
-deleting $u_{i}$ costs $n_{i}$ where $n_{i}$ is the number of children
-of $u_{i}$.
+To delete $u_{i}$ one of the nodes of height 1 in $T$, in order to
+respect the constraint of Zhang, we have to delete first all of his
+children except one. Therefore, deleting $u_{i}$ costs $n_{i}$ where
+$n_{i}$ is the number of children of $u_{i}$.
 
 If $u_{i}$ is not deleted, than we have to adjust the number of
 children it has to $\tilde{n}$, which costs
@@ -101,50 +103,106 @@ deleted if and only if $n_{i}$ is closer to 0 than to
 $\tilde{n}$. Figure \ref{fig:optimalcost} shows $f_{i}$ the minimum
 cost for each $u_{î}$ in function of $\tilde{n}$.
 
+We will denote by $I_{1}$ the complement of $I_{0}$ in the set of
+indices $\llbracket 1;N \rrbracket$. $I_{1}$ is composed of the
+indices $i$ such that $\Phi(u_{i})$ is of height 1.
+\begin{remark}
+  The distance between $T$ and $S$ is equal to $\sum_{i \in I_{0}}
+  n_{i} + \sum_{i \in I_{1}} \left| n_{i} - \tilde{n} \right|$
+\end{remark}
+
 \begin{figure}
   \centering
   \caption{optimal cost for $u_{i}$ in function of $\tilde{n}$}
   \label{fig:optimalcost}
 \end{figure}
 
-By summing the functions on every $u_{i}$, we obtain $f$ the minimal cost
-of a mapping leading from $T$ to a self nested tree of height 2, with
-$N$ nodes of depth 1, in function of $\tilde{n}$ the number of
+By summing the functions on every $u_{i}$, we obtain $f$ the minimal
+cost of a mapping leading from $T$ to a self nested tree of height 2,
+with $N$ nodes of depth 1, in function of $\tilde{n}$ the number of
 children of the nodes of height 1. We can observe that the resulting
-function is a piecewise linear function and every differentiable break
-has for abscissa one of the $n_{i}$ or $2*n_{i}$. Therefore, the
-minimum of this function is reached in one of those points. Since
-$f_{i}$ is increasing before $2*n_{i}$ and constant after and that the
-derivative of the other $f_{j}$ are equal before and after $2*n_{i}$,
-$2*n_{i}$ cannot be a minimum of $f$.
+function is a piecewise linear function and that every break in its
+differentiability has for abscissa one of the $n_{i}$ or
+$2*n_{i}$. Therefore, the minimum of this function is reached in one
+of those points. Since every $f_{i}$ is increasing just before $2*n_{i}$ and
+constant after and that the derivative of the other $f_{j}$ are equal
+before and after $2*n_{i}$, $2*n_{i}$ cannot be a minimum of $f$.
 
 Thus, by evaluating $f$ on every $n_{i}$, it is possible to find the
 minimum of $f$ and thereby find the NST of $T$.
 
-\begin{remark}
-  We will denote by
-  ${I_{0} = \{i \in \llbracket 1;N \rrbracket \ | \ u_{i} \text{ is
-      deleted} \}}$ and ${I_{1} = \{i \in \llbracket 1;N \rrbracket \
-    | \ 
-    \Phi(u_{i}) \text{ is of height } 1 \}}$.\\
-  For every $i \in I_{0}$, for every $j \in I_{1}$, $n_{i} < n_{j}$
+It is possible to show that every $f(n_{i})$ can be computed in
+constant time by using the value of $f(n_{i-1})$ and $f(n_{1})$ can be
+computed in linear time. For this reason, $NST(T)$ can be computed in
+$O(N*log(N))$ (it is necessary to order the
+$(n_{i})_{1 \leqslant i \leqslant N}$ by ascending order) where $N$ is
+the number of nodes of height 1 in $T$.
 
-proof in appendix
+Since the NST (with only height preserving operations) can be computed
+in polynomial time on the trees of height 2, this proves that if the
+NST problem (with only height preserving operations) is NP-complete,
+the set of images of the reduction cannot be the trees of height 2,
+otherwise we would have found a way to solve any NP-complete problem
+in polynomial time, which is unreasonnable.
 
+We can make two more remarks that will help us later. 
+
+\begin{remark} 
+  For every $i \in I_{0}$, for
+  every $j \in I_{1}$, $n_{i} < n_{j}$.\\
+  Intuitively, if $n_{i} < n_{j}$ it costs less to delete all the
+  children of $u_{i}$ than the one of $u_{j}$. See appendix for the proof.
 \end{remark}
 
 \begin{remark}
-$\tilde{n}$ est une des médianes des $(n_{i})_{i \in I_{1}}$
--> explication + preuve en annexe
+  Furthermore, $\tilde{n}$ is one of the medians of the
+  $(n_{i})_{i \in I_{1}}$. \\
+  Indeed, the median minimizes
+  $\sum_{i \in I_{1}} \left| n_{i} - \tilde{n} \right|$. See proof in
+  appendix for further details.
 \end{remark}
 
-probleme: c'est polynomial -> pas assez compliqué!
-Sans la contrainte de hauteur ?
+\subsubsection{Trees of height 2 without preserving the height of the
+  nodes}
 
-\subsubsection{Trees of height 2 without the heigth constraint}
+The NST problem is solved easily on the trees of height 2 if we
+authorize only the edit operations preserving the height. It can
+either be due to the set of trees considered or to the restriction of
+the edit operations. I decided to look at the problem without the
+restriction on the eit operations, in order to use the work done in
+the previous section. 
+
 We will use the same notations as in the preceding paragraph. We will
-denote by $I_{k}$ the set ${\{i \in \llbracket 1;N \rrbracket \ | \ 
-\Phi(u_{i}) \text{ is of height } k \}}$. 
+denote by $I_{k}$ the set of indices $i$ of $\llbracket 1;N \rrbracket$
+such that $\Phi(u_{i})$ is of height $k$. Let us denote by
+$\tilde{n}^{k}$ the number of children of the nodes of height $k$ in
+$S$.
+
+It is possible to show that $S$ has the shape %inserer figure
+$S$ is characterized by $(I_{k})_{0 \leqslant k \leqslant H-1}$ and
+$(\tilde{n}_{k})_{1 \leqslant k \leqslant H-1}$ where $H$ is the
+height of $S$.
+
+The remarks of the previous section can be adapted: one again it is
+possible to show that 
+
+\begin{lem}
+  For every $k \geqslant 0$, for every $i \in I_{k}$ and $j \in
+  I_{k+1}$,
+  $$n_{i} < n_{j}$$
+\begin{proof} See appendix
+\end{proof}
+\end{lem}
+ 
+
+We can first notice that for every $k \geqslant 2$, if $I_{k}$ is not
+empty, than $I_{k-1}$ is not empty. Indeed, otherwise it would mean
+that one of the $u_{i}$ has been brought to the height $k$, and none to
+the height $k-1$. By bringing $u_{i}$ to the height $k-1$ instead of $k$, we
+would obtain a self nested tree that is closer to $T$ than $S$, which
+is in contradiction with the fact that $S = NST(T)$.
+
+We can also notice that every node 
 
 Intuition:\\
 Idée 1: Plusieurs types de noeud: ceux ou on supprime les fils, ceux
@@ -280,10 +338,10 @@ I choose to start the reduction from the INDEP-SET problem because
 of its simplicity and of the clarity of its \constraints and
 \variables. Indeed, each vertex of the graph can be considered as
 a binary \variable taking the value 1 if the vertex belongs to $V'$
-and 0 otherwise. There are to types of \constraints, the first one is
-that only $k$ variables can take the value 1, the second one is that
+and 0 otherwise. There are to types of \constraints, the first one is that
 if there is an edge between thes vertices $x$ and $y$, the
-corresponding \variables cannot take both the value 1.
+corresponding \variables cannot take both the value 1; the second one is
+that only $k$ variables can take the value 1.
 
 I decided to find pieces of trees that could be easily combined
 together and that could be the \widgets of the reduction we are trying
@@ -306,18 +364,23 @@ NST problem to give in \textsc{Input} a DAG instead of a tree, the
 construction has still chances to be polynomial.
 
 A piece of DAG that respects this properties is shown Figure
-\ref{fig:widget}. The corresponding tree is at equal distance of the
-self nested trees Figures \ref{fig:NSTwidget1} and
+\ref{fig:widget} (its DAG compression is shown Figure
+\ref{fig:DAGwidget}). The corresponding tree is at equal distance of
+the self nested trees Figures \ref{fig:NSTwidget1} and
 \ref{fig:NSTwidget2}, and their DAG compression is shown Figures
-\ref{fig:DAGwidget1} and \ref{fig:DAGwidget2}. These \widgets can be
-pilled up and used independently as shown Figure
-\ref{fig:empilement}. 
+\ref{fig:DAGwidget1} and \ref{fig:DAGwidget2}. To set the ideas, we
+will say arbitrarily that the \variable corresponding to a \widget
+takes the value 1 if in the NST considered, the \widget was
+transformed into Figure \ref{fig:DAGwidget1} and 0 if it was
+transformed into Figure \ref{fig:DAGwidget2}.
 
-We will denote the tree obtained by pilling up
+These \widgets can be pilled up and used independently as shown Figure
+\ref{fig:empilement}. We will denote the tree obtained by pilling up
 $n$ \widgets by $T_{n}$. It is possible to show that $T_{n}$ is
 equidistant from every tree having the DAG compression of Figure
 \ref{fig:NSTempilement} where every $A_{i}$ is either the DAG piece
-Figure \ref{fig:DAGwidget1} or Figure \ref{fig:DAGwidget2}. There
+Figure \ref{fig:DAGwidget1} or Figure \ref{fig:DAGwidget2}. We will
+denote by $\mathcal{S}_{n}$ the set of these self nested trees. There
 exists no tree closer to $T_{n}$ than these ones. %reference en annexe
 
 %pleins de figures
@@ -328,25 +391,43 @@ exists no tree closer to $T_{n}$ than these ones. %reference en annexe
   \label{fig:widget}
 \end{figure}
 
-To summarize, we now have a tree $T_{n}$ which has exactly $2^{n}$
-different NST and each one of this self nested trees corresponds to an
-assignment of $n$ variables in $\{0;1\}$. As explained before, this
-could correspond to the first step of a reduction of the NST
-problem. In order to complete the reduction, we have to add
-\constraints and to choose from which NP complete problem do the
-reduction. Once an NP-complete problem $P$ is chosen, adding \constraints
-means modifing $T_{n}$ in function of the instance of $P$, in
-order to obtain a tree $T$ closer to the NST corresponding to a
-valid assignment of \variables for the instance of $P$.
+To summarize, $T_{n}$ has exactly $2^{n}$ different NST and each one
+of this self nested trees corresponds to an assignment of $n$
+variables in $\{0;1\}$. As explained before, this could correspond to
+the first step of a reduction of the NST problem. In order to complete
+the reduction, we have to add \constraints. Adding \constraints means
+modifing $T_{n}$ in function of the instance of INDEP-SET, in order to
+obtain a tree $T$ closer to the NST corresponding to a valid
+assignment of \variables for the instance of INDEP-SET. We will denote
+by $\mathcal{A}$ the subset of $\mathcal{S}_{n}$ of those trees.
+ 
+More concretely, given a graph $G=(V,E)$ and two vertices $u$ and $v$,
+if there is an edge between $u$ and $v$, we have to modify $T_{n}$ to
+obtain $T$ such that all the self nested trees of $\mathcal{s}_{n}$
+where at least one of the \widgets corresponding to $u$ and $v$ was
+modified into Figure \ref{fig:DAGwidget2} have to be closer to $T$
+than the rest of $\mathcal{S}_{n}$. The goal is to add this
+modifications for every edge in $E$, and to reduce at every step the
+distance to the self nested trees of $\mathcal{A}$. %shema explicatif
+
+It appears that if the modification for one edge does not equally
+reduce the distance to the trees of $\mathcal{A}$, it will be far more
+complicated to prove the other direction of the equivalence. Indeed, %
+By doing this modifications for every edge in $E$,
+we should have applied all the \constraints of the first type of the
+INDEP-SET problem and we would still have to find how to translate the
+second one (the fact that only $k$ \variables can take the value 1).
 
 
-
-
-L'idée est alors de modifier légerment $T_{n}$, en fonction de
+L'idée est alors de modifier légerement $T_{n}$, en fonction de
 l'instance de départ afin de l'approcher davantage des arbres
 representant une solution valide, ainsi que de ceux dont moins de $n$
 variables ont été mis à une valeur positive. 
 \subsection{troisieme approche}
+Instead of trying to find the \widgets, we will this time search the
+\constraints. 
+
+
 On essaye cette fois d'obtenir les contraintes avant de savoir comment
 les agencer
 
